fix: remove shadow from canvas-wrap element
- Add box-shadow: none to .canvas-wrap element
- This should eliminate the unwanted shadow that was appearing at the bottom of the page
- User confirmed this was the element causing the shadow issue

--- a/style.css
+++ b/style.css
@@ -689,6 +689,7 @@ p {
   width: 100%;
   height: 100%;
   min-height: 400px;
+  box-shadow: none;
 }
 
 /* Add gradient effect below the canvas */
